"Show menu" isn't respected on save as default #73668

Closed
opened 2020-02-08 06:41:41 +01:00 by Adam Earle · 14 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4
Worked: (optional)

Short description of error
The "Show menu" feature is not respected in the UI when you save as default

Exact steps for others to reproduce the error

  1. Open blender click on the top bar
  2. Click open the menu
  3. Untick show menu

image.png
4. Save as default close blender
image.png
5. Open blender and the menu is expanded not collapsed

If you have any question please just ask. Oh, the attached Blend file is just an extreme version of it not working as well.

system-info.txt

Layout.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` Worked: (optional) **Short description of error** The "Show menu" feature is not respected in the UI when you save as default **Exact steps for others to reproduce the error** 1. Open blender click on the top bar 2. Click open the menu 3. Untick show menu ![image.png](https://archive.blender.org/developer/F8328985/image.png) 4. Save as default close blender ![image.png](https://archive.blender.org/developer/F8328989/image.png) 5. Open blender and the menu is expanded not collapsed If you have any question please just ask. Oh, the attached Blend file is just an extreme version of it not working as well. [system-info.txt](https://archive.blender.org/developer/F8328981/system-info.txt) [Layout.blend](https://archive.blender.org/developer/F8328982/Layout.blend)
Author

Added subscriber: @AdamEarle

Added subscriber: @AdamEarle

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I recall seeing this reported before but wasn't able to find it.

I recall seeing this reported before but wasn't able to find it.
Member

Added subscriber: @Poulpator

Added subscriber: @Poulpator
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Data of the global areas (top-bar and status-bar) isn't currently written to files. We could easily do that (most of it is implemented but disabled and possibly needs updates) and I probably would accept it from my side if there was a proposal to enable it.
But strictly speaking, this is not a bug, just a symptom of a missing feature.

Data of the global areas (top-bar and status-bar) isn't currently written to files. We could easily do that (most of it is implemented but disabled and possibly needs updates) and I probably would accept it from my side if there was a proposal to enable it. But strictly speaking, this is not a bug, just a symptom of a missing feature.
Author

I guess it doesn't matter if its a bug or not. This same idea is already respected in other areas of blender and works.

Maybe just hasn't been implemented properly due to cold beer on a hot day?

I guess it doesn't matter if its a bug or not. This same idea is already respected in other areas of blender and works. Maybe just hasn't been implemented properly due to cold beer on a hot day?
Member

It only matters for organizational purposes. We have a strict view of what is considered a bug , so we can keep things in a manageable state.

Like I've said the issue is that top-bar data isn't stored in .blend files currently. I actually did implement this but we decided to disable it until there's an actual need for this. It may need some updating by now, but should mostly work still.

It only matters for organizational purposes. We have a strict view of [what is considered a bug ](https://wiki.blender.org/wiki/Reference/Not_a_bug), so we can keep things in a manageable state. Like I've said the issue is that top-bar data isn't stored in .blend files currently. I actually did implement this but we decided to disable it until there's an actual need for this. It may need some updating by now, but should mostly work still.
Author

yeah

yeah
Member

Created a patch to enable the global area data writing, D8845. The old code didn't need updates.
That fixes this issue.

Created a patch to enable the global area data writing, [D8845](https://archive.blender.org/developer/D8845). The old code didn't need updates. That fixes this issue.
Author

well done mate

well done mate

This issue was referenced by ef4aa42ea4

This issue was referenced by ef4aa42ea4ffa1bf7f5ad7f8e7f7b6acf9e3c3e6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-11-02 18:35:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73668
No description provided.